[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Scene02.gd" type="Script" id=1]
[ext_resource path="res://art/info_layer_background.png" type="Texture2D" id=2]
[ext_resource path="res://scenes/LocationActionButtons.tscn" type="PackedScene" id=3]

[sub_resource type="TileSet" id=1]
0/name = "info_layer_background.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Scene02" type="Node2D"]
script = ExtResource( 1 )

[node name="TextBackground" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PackedInt32Array( 917521, 0, 0, 917525, 0, 0, 917529, 0, 0, 917533, 0, 0, 917537, 0, 0, 917541, 0, 0, 917545, 0, 0, 1179665, 0, 0, 1179669, 0, 0, 1179673, 0, 0, 1179677, 0, 0, 1179681, 0, 0, 1179685, 0, 0, 1179689, 0, 0, 1441809, 0, 0, 1441813, 0, 0, 1441817, 0, 0, 1441821, 0, 0, 1441825, 0, 0, 1441829, 0, 0, 1441833, 0, 0, 1703953, 0, 0, 1703957, 0, 0, 1703961, 0, 0, 1703965, 0, 0, 1703969, 0, 0, 1703973, 0, 0, 1703977, 0, 0, 1835025, 0, 0, 1835029, 0, 0, 1835033, 0, 0, 1835037, 0, 0, 1835041, 0, 0, 1835045, 0, 0, 1835049, 0, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 280.0
offset_top = 232.0
offset_right = 712.0
offset_bottom = 504.0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
offset_right = 432.0
offset_bottom = 14.0
text = "Pawn Shop"
align = 1

[node name="HBoxContent" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 18.0
offset_right = 432.0
offset_bottom = 86.0

[node name="HBoxActions" type="HBoxContainer" parent="VBoxContainer/HBoxContent"]
offset_right = 214.0
offset_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContent/HBoxActions"]
offset_right = 214.0
offset_bottom = 68.0
size_flags_horizontal = 3
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/HBoxContent/HBoxActions/VBoxContainer"]
offset_right = 214.0
offset_bottom = 20.0
size_flags_horizontal = 3
text = "Pawn"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContent/HBoxActions/VBoxContainer"]
offset_top = 24.0
offset_right = 214.0
offset_bottom = 44.0
text = "Redeem"

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContent/HBoxActions/VBoxContainer"]
offset_top = 48.0
offset_right = 214.0
offset_bottom = 68.0
text = "Buy"

[node name="HBoxText" type="HBoxContainer" parent="VBoxContainer/HBoxContent"]
offset_left = 218.0
offset_right = 432.0
offset_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InfoLabelBox" type="Label" parent="VBoxContainer/HBoxContent/HBoxText"]
offset_right = 214.0
offset_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Default Text Default Text "
align = 3
valign = 3
autowrap = true

[node name="LocationActionButtons" parent="VBoxContainer" instance=ExtResource( 3 )]
position = Vector2( -272, 56 )
